@@ -1,3 +1,11 @@
+2002-07-10  Martin Weber <martweb@gmx.net>
+
+	* output.c (at_spline_list_foreach, at_spline_list_array_foreach): 
+	Added "unsigned" to `i`.
+	included strgicmp.h.
+
+	Message-ID: <3D2B3A63.9B8AE188@gmx.net>.
+	
 2002-07-09  Masatake YAMATO  <yamato@redhat.com>
 
 	* configure.in: Version 0.30.2.
